--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
       run: |
         npm install
         npm run build
+        vuepress build docs
         
     - name: Deploy Build Files
       env:
