--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,32 +1,16 @@
-name: build & deploy
-
-on:
-  push:
-    branches: [ master ]
-
+name: Build and Deploy
+on: [push]
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
-    - name: checkout
-      uses: actions/checkout@v2
-
-    - name: Install and Build
-      run: |
-        npm install
-        npm run build
-        vuepress build docs
-        
-    - name: Deploy Build Files
+    - name: Checkout
+      uses: actions/checkout@main
+ 
+    - name: Vuepress deploy
+      uses: lee20h/TIL
       env:
-        # You should enroll ACEESS_TOKEN to repository's secret
-        ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }} 
-      run: |
-        cd .vuepress/dist
-        git config --global user.email "lee0h.0417@gmail.com"
-        git config --global user.name "YoungHun"
-        git init
-        git add -A
-        git commit -m 'deploy with vuepress'
-        git push -f https://${ACCESS_TOKEN}@github.com/lee20h/TIL.git master:gh-pages
+        ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+        BUILD_SCRIPT: yarn && yarn build
+        TARGET_BRANCH: gh-pages
+        BUILD_DIR: build/
